--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,8 @@
+
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addHotelModal" style="margin-bottom: 8px;">
  <i class="fa fa-plus"></i> Add User
 </button>
 <br>
-
 <!--registered user detail-->
 <div class="table-responsive">
     <table class="table table-striped table-hover" [hidden]="!isRegisteredUser">
@@ -11,18 +11,21 @@
             <th scope="col" (click)="sort('userId')">#<i class="fa fa-sort"></i></th>
             <th scope="col" (click)="sort('username')">Username <i class="fa fa-sort"></i></th>
             <th scope="col" (click)="sort('email')">Email <i class="fa fa-sort"></i></th>
-            <th scope="col">Actions</th>
+            <th scope="col" (click)="sort('roles')">Role<i class="fa fa-sort"></i></th>
+            <!-- <th scope="col">Actions</th> -->
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let registeredUser of registeredUserDetail | orderBy: key:reverse | paginate: { itemsPerPage: 6,currentPage: page }  " >
+          <tr *ngFor="let registeredUser of registeredUserDetail | orderBy: key:reverse |
+           paginate: { itemsPerPage: 7,currentPage: page }  " >
          <td>{{registeredUser.userId}}</td>
          <td>{{registeredUser.username}}</td>
          <td>{{registeredUser.email}}</td>
+         <td>{{registeredUser.roles[0].name}}</td>
          <!-- <td><button (click)="deleteUser(registeredUser.userId)" class="btn btn-danger"><i class="fas fa-trash"></i></button>|  -->
-        <td> 
           <!-- <button (click)="editCustomer(registeredUser.userId)" class="btn btn-secondary"><i class="fas fa-edit"></i></button>| -->
-          <button (click)="UserClicked(registeredUser.userId)" class="btn btn-success" data-toggle="modal" data-target="#registeredUserModalView"><i class="fas fa-eye"></i></button></td> 
+          <!-- <button (click)="UserClicked(registeredUser.userId)" class="btn btn-success" data-toggle="modal" 
+          data-target="#registeredUserModalView"><i class="fas fa-eye"></i></button></td>  -->
         </tr>
       
     </tbody>
@@ -36,11 +39,12 @@
 
 <!-- View registered user modal-->
 <!--Modal start here-->
-<div class="modal fade" id="registeredUserModalView" tabindex="-1" role="dialog" aria-labelledby="registeredUserModalViewCenterTitle" aria-hidden="true">
+<div class="modal fade" id="registeredUserModalView" tabindex="-1" role="dialog" 
+aria-labelledby="registeredUserModalViewCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="registeredUserModalViewLongTitle">View Registered User</h5>
+        <h3 class="modal-title" id="registeredUserModalViewLongTitle">View Registered User</h3>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -51,18 +55,18 @@
           <form
           >
             <div class="form-group">
-              <label for="viewUserName">UserName</label>
-              <input type="text" [(ngModel)]="username" name="username" class="form-control" id="viewUserName" readonly>
+              <label for="viewUserName"><strong>Username</strong></label><br>
+                {{username}}
             </div>
               
             <div class="form-group">
-              <label for="viewEmail">Email</label>
-              <input type="email"[(ngModel)]= "email" name="email" class="form-control" id="viewEmail" readonly>
+              <label for="viewEmail"><strong>Email</strong></label><br>
+                {{email}}
             </div>
 
             <div class="form-group">
-              <label for="viewRole">Role</label>
-              <input type="text" [(ngModel)]="role" name="role" class="form-control" id="viewRole" readonly >
+              <label for="viewRole"><strong>Role</strong></label><br>
+                {{role}}
             </div>
  
           <div class="modal-footer">
@@ -71,18 +75,17 @@
           </div>
 
           </form>
-
       </div>
     </div>
   </div>
 </div>
 
- <!-- Modal -->
+ <!-- Modal for register user -->
  <div class="modal fade" id="addHotelModal" tabindex="-1" role="dialog" aria-labelledby="addHotelModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="addHotelModalLongTitle">Add Hotel</h5>
+        <h3 class="modal-title" id="addHotelModalLongTitle">Register</h3>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -90,31 +93,33 @@
       <div class="modal-body">
 
           <!-- Form start here -->
-          <form 
+          <!-- <form 
           
           name="form"
           #f="ngForm"
-          (ngSubmit)="f.form.valid && onSubmit()"
-         
+          (ngSubmit)="f.form.valid && onSubmit()"  
           novalidate
           >
 
               <div class="form-group">
-                  <label for="exampleInputUsername1">Username</label>
-                  <input type="text" [(ngModel)]="username" name="username" class="form-control" id="exampleInputUsername1" aria-describedby="usernameHelp" placeholder="Enter username">
+                  <label for="exampleInputUsername1"><strong>Username</strong></label>
+                  <input type="text" [(ngModel)]="username" name="username" class="form-control" 
+                  id="exampleInputUsername1" aria-describedby="usernameHelp" placeholder="Enter username">
                 </div>
 
               <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
+                <label for="exampleInputEmail1"><strong>Email</strong></label>
                 <input type="email" [(ngModel)]="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                
               </div>
               <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" [(ngModel)]="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <label for="exampleInputPassword1"><strong>Password</strong></label>
+                <input type="password" [(ngModel)]="password" name="password" class="form-control"
+                 id="exampleInputPassword1" placeholder="Password">
               </div>
+
               <div class="form-select">
-               <label>Role</label><br>
+               <label><strong>Role</strong></label><br>
                <select [(ngModel)]="roles" name="roles" class="form-control">
                    <option value="admin">Admin</option>
                    <option value="hotel">Hotel</option>
@@ -126,10 +131,112 @@
                   <button type="submit" class="btn btn-success" data-dismiss="modal">Add</button>
                 </div>
               
-            </form>
+            </form> -->
+
+            <form
+            *ngIf="!isSuccessful"
+            name="form"
+            #f="ngForm"
+            (ngSubmit)="f.form.valid && onSubmit()"
+            novalidate
+          >
+    
+          
+            <div class="form-group">
+              <label for="username">Username: <i class="fas fa-user"></i></label>
+              <input
+                type="text"
+                class="form-control"
+                name="username"
+                id="username"
+                [(ngModel)]="form.username"
+                required
+                minlength="3"
+                maxlength="20"
+                #username="ngModel"
+              />
+              
+              <div class="alert-danger" *ngIf="f.submitted && username.invalid">
+                <div *ngIf="username.errors?.required">Username is required</div>
+                <div *ngIf="username.errors?.minlength">
+                  Username must be at least 3 characters
+                </div>
+                <div *ngIf="username.errors?.maxlength">
+                  Username must be at most 20 characters
+                
+              </div>
+            </div>
+            </div>
+    
+            <div class="form-group">
+              <label for="email">Email: <i class="fa fa-envelope" aria-hidden="true"></i></label>
+              <input
+                type="email"
+                class="form-control"
+                name="email"
+                id="email"
+                [(ngModel)]="form.email"
+                required
+                email
+                #email="ngModel"
+              />
+    
+              <div class="alert-danger" *ngIf="f.submitted && email.invalid">
+                <div *ngIf="email.errors?.required">Email is required</div>
+                <div *ngIf="email.errors?.email">
+                  Email must be a valid email address
+                </div>
+              </div>
+             
+            </div>
+            <div class="form-group">
+              <label for="password">Password: <i class="fas fa-lock"></i></label>
+              <input
+                type="password"
+                class="form-control"
+                name="password"
+                id="password"
+                [(ngModel)]="form.password"
+                required
+                minlength="6"
+                maxlength="20"
+                #password="ngModel"
+              />
+    
+              <div class="alert-danger" *ngIf="f.submitted && password.invalid">
+                <div *ngIf="password.errors?.required">Password is required
+                </div>
+                <div *ngIf="password.errors?.minlength">
+                  Password must be at least 6 characters
+                </div>
+                <div *ngIf="password.errors?.maxlength">
+                  Password must be at most 20 characters
+                </div>
+              </div>
+            </div>
+
+            <div class="container" style="width: 18 rem">
+              <label style="text-align: center;"><strong>Role</strong></label>
+              <select  class="form-control" (change)="selectRole($event)">
+                <option selected>--select--</option>
+                <option value="admin">Admin</option>
+                <option value="hotel">Hotel</option>
+                <option value="customer">Customer</option>
+              </select>
+            </div><br>
+           
+                   <div class="form-group">
+              <button class="btn btn-primary btn-block">Sign Up</button>
+            </div>
+            <div class="alert alert-warning" [hidden]="!isSignUpFailed">
+              Signup failed!<br />{{errorMessage}}
+            </div>
+          
+    
+          </form>
+    
 
       </div>
-  
     </div>
   </div>
 </div>
